--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ textarea {
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url('../images/img-cover.jpg');
+    url('../images/imgcover.jpg');
   background-repeat: no-repeat;
   background-position: 50% 50%;
   max-width: 1600px;
