--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,8 @@ textarea {
 
 .logo {
   margin-right: 93px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
   color: var(--black-color);
   font-family: Raleway, sans-serif;
@@ -170,7 +172,7 @@ textarea {
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
-  background-size: contain;
+  background-size: cover;
 }
 
 .main-title {
@@ -499,6 +501,11 @@ textarea {
   line-height: 1.62;
   text-align: center;
   letter-spacing: 0.03em;
+}
+
+.overbtn-item-main {
+  color: var(--white-color);
+  background: var(--brand-color);
 }
 
 .overbtn + .overbtn {
